Revert container height and width to fixed. Need to adjust the grid item size to stretch to fill the container.

--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ div {
     padding: 10px;
     display: flex;
     flex-wrap: wrap-reverse;
-    max-width: 400px;
-    max-width: 400px;
+    height: 400px;
+    width: 400px;
+    align-content: space-evenly;
 }
 
 .grid-item {
